// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Progress over 1 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ inmWDT"
    width={0.012}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      1
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Progress under 1 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ hprasq"
    width={-0.9}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      -90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots No props 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ bEycvz"
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      NaN
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots Progress 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ bMtwVg"
    width={0.9}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots Progress&WarningTreshold 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ iVXatG"
    width={0.7}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      70
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar With children 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ bMtwVg"
    width={0.9}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar invalid progress 1`] = `
<div
  className="sc-AxjAm raIux"
>
  <div
    className="sc-AxirZ keXVXO"
    width={null}
  >
    <span
      className="sc-AxiKw MbTJa"
    >
      0
      %
    </span>
  </div>
</div>
`;
